# validata.etalab.studio

./: .env.example  Dockerfile  Dockerfile.api.yml  Procfile  README.md  config.yaml  docker-compose.api.yml  docker-compose.yml  homepage_config.json  nginx.conf.sigil  requirements.txt
validata-table-main/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.override.yml  docker-compose.preprod.override.yml  docker-compose.yml  pyproject.toml
validata-table-main/src/tests/integration_tests_validata_ui/: cypress.json
validata-table-main/src/tests/tests_validata_core/: test_arrays.py  test_core.py  test_encoding.py  test_frictionless.py  test_helpers.py  test_task_errors.py  test_url.py  test_xlsx.py  utils.py
validata-table-main/src/tests/tests_validata_core/custom_checks/: test_cohesive_columns_value.py  test_compare_columns_value.py  (+10 more)
validata-table-main/src/validata_api/: Dockerfile  README.md
validata-table-main/src/validata_api/api/: __init__.py  config.py  json_errors.py  route_handlers.py
validata-table-main/src/validata_core/: ERRORS.md  README.md  __init__.py  cli.py  error_messages.py  helpers.py  structure_warnings.py
validata-table-main/src/validata_core/custom_checks/: README.md  __init__.py  cohesive_columns_value.py  compare_columns_value.py  french_gps_coordinates.py  french_siren_value.py  french_siret_value.py  missing_required_header.py  nomenclature_actes_value.py  one_of_required.py  opening_hours_value.py  phone_number_value.py  sum_columns_value.py  utils.py  year_interval_value.py
validata-table-main/src/validata_ui/: Dockerfile  README.md
validata-table-main/src/validata_ui/app/: __init__.py  config.py  model.py  pdf_renderer.py  ui_util.py  validata_util.py  views.py
validata-table-main/src/validata_ui/docs/: README.md
(+30 files in other folders)
